PRAGMA foreign_keys=OFF;
BEGIN TRANSACTION;
CREATE TABLE comment (id integer, content varchar(5000) not null, postdate timestamp not null, post_id bigint, user_id bigint, primary key (id));
INSERT INTO comment VALUES(1,'test (8901234) !@#$',1787085664962,1,1);
INSERT INTO comment VALUES(2,'Test (1234567)',1787141851423,1,2);
INSERT INTO comment VALUES(3,'Bro im done!!',1787146138995,1,1);
INSERT INTO comment VALUES(4,'use that jawn!!!',1787146415742,2,4);
INSERT INTO comment VALUES(5,'Yo it looks good',1787149456599,2,2);
INSERT INTO comment VALUES(6,'hbhjjkn',1787177980866,2,4);
INSERT INTO comment VALUES(7,'https://youtu.be/4nAVA-0RyDA?si=llivdc6OsbDhipFL',1787318663509,1,2);
CREATE TABLE post (id integer, content varchar(5000) not null, postdate timestamp not null, title varchar(255) not null, subforum_id bigint, user_id bigint, media_url varchar(1000), locked BOOLEAN NOT NULL DEFAULT 0, pinned BOOLEAN NOT NULL DEFAULT 0, primary key (id));
INSERT INTO post VALUES(1,'test (1234567)',1787085516006,'hello world',1,2,NULL,0,0);
INSERT INTO post VALUES(2,'I need to use this kanban board before they bring it up again',1787146215032,'Testing notifications',1,1,NULL,0,0);
INSERT INTO post VALUES(3,'how to build a wall',1787318721309,'DEmo project',1,2,'https://youtu.be/4nAVA-0RyDA?si=llivdc6OsbDhipFL',0,0);
CREATE TABLE subforum (id integer, description varchar(255), hidden boolean not null, title varchar(255) not null unique, parent_id bigint, icon varchar(255), primary key (id));
INSERT INTO subforum VALUES(1,'News, updates, and important information about DIY Stardust.',0,'Announcements',NULL,'📢');
INSERT INTO subforum VALUES(2,'Talk about DIY projects, ideas, experiences, and anything community-related.',0,'General Discussion',1,'💬');
INSERT INTO subforum VALUES(3,'Report problems, bugs, and issues with DIY Stardust.',0,'Bug Reports',1,'🐞');
INSERT INTO subforum VALUES(4,'Woodworking, fabrication, building projects, and making things from scratch.',0,'Build & Make',NULL,'🔨');
INSERT INTO subforum VALUES(5,'Anything DIY-related that does not fit another category.',0,'Other',NULL,'📁');
INSERT INTO subforum VALUES(6,'Repairs, remodeling, electrical, plumbing, and improving your space.',0,'Home Improvement',NULL,'🏠');
INSERT INTO subforum VALUES(7,'Programming, AI, computers, electronics, and building with technology.',0,'Tech & Coding',NULL,'💻');
INSERT INTO subforum VALUES(8,'Photography, video, art, design, and hands-on creative projects.',0,'Creative Projects',NULL,'🎨');
INSERT INTO subforum VALUES(9,'Vehicle repairs, maintenance, modifications, and restoration.',0,'Auto & Mechanics',NULL,'🚗');
INSERT INTO subforum VALUES(10,'Fishing, camping, hiking, and outdoor projects.',0,'Outdoors & Fishing',NULL,'🎣');
INSERT INTO subforum VALUES(11,'Tools, equipment, workshop setups, gear reviews, and recommendations.',0,'Tools & Gear',NULL,'🧰');
INSERT INTO subforum VALUES(12,'Fix it, restore it, repurpose it, and give things another life.',0,'Repair & Reuse',NULL,'♻️');
CREATE TABLE IF NOT EXISTS "user" (id integer, admin boolean not null, email varchar(255) not null unique, password_hash varchar(255) not null, username varchar(255) not null unique, primary key (id));
INSERT INTO user VALUES(1,0,'m@email.com','$2a$10$EURd08rq8FqwNzAxR07N5.9d2oul1HRjzPLzlu79xyzOS350Jcn1K','mattg');
INSERT INTO user VALUES(2,0,'k@email.com','$2a$10$C1lBuSpg7HdlN/0ez2VY7uumVvAsUQNK.eoK02NZlsss86Je5CZQO','khirym');
INSERT INTO user VALUES(3,0,'t@email.com','$2a$10$pEZE/zKwHIbtAnOnfLJcRuvuSAvQBUr4u8eFtQvkBLJzm.YodKFSS','smith');
INSERT INTO user VALUES(4,0,'ts@email.com','$2a$10$9mYeYJpgeJFtTfAcxNohj.lEZpjGspLSvt40z03aURMFHOs1xqTsC','tsmith');
CREATE TABLE direct_message (id integer, content varchar(255), sent_at timestamp, "recipient_id" bigint, "sender_id" bigint, primary key (id));
INSERT INTO direct_message VALUES(1,'what up!!!',1787084081141,1,2);
INSERT INTO direct_message VALUES(2,'what up big dawg',1787085616037,2,1);
INSERT INTO direct_message VALUES(3,'Terrik smoke Newport 100 LONGS',1787086003985,2,1);
INSERT INTO direct_message VALUES(4,'did you get my message',1787146232762,2,1);
CREATE TABLE bookmarks (id integer, post_id bigint not null, user_id bigint not null, primary key (id));
INSERT INTO bookmarks VALUES(1,1,2);
INSERT INTO bookmarks VALUES(2,1,1);
INSERT INTO bookmarks VALUES(3,2,4);
INSERT INTO bookmarks VALUES(4,2,2);
CREATE TABLE notifications (id integer, created_at timestamp not null, message varchar(255) not null, read boolean not null, recipient_id bigint not null, sender_id bigint, primary key (id));
INSERT INTO notifications VALUES(1,1787145341639,'khirym liked your post.',1,2,2);
INSERT INTO notifications VALUES(2,1787146123063,'mattg liked your post.',0,2,1);
INSERT INTO notifications VALUES(3,1787146403019,'tsmith liked your post.',0,1,4);
INSERT INTO notifications VALUES(4,1787149436666,'khirym liked your post.',0,1,2);
INSERT INTO notifications VALUES(5,1787318613503,'mattg liked your post.',0,2,1);
INSERT INTO notifications VALUES(6,1787318730048,'khirym liked your post.',0,2,2);
CREATE TABLE post_like (id integer, post_id bigint not null, user_id bigint not null, primary key (id));
INSERT INTO post_like VALUES(1,1,2);
INSERT INTO post_like VALUES(3,2,4);
INSERT INTO post_like VALUES(4,2,2);
INSERT INTO post_like VALUES(5,1,1);
INSERT INTO post_like VALUES(6,3,2);
COMMIT;
